styles.css
/* ... */
#popup-label-options {
  padding-top: 2px;
  padding-bottom: 2px;
  display: block;
  overflow-x: auto;
  width: 165px;
  overflow-y: auto;
  border: thin ridge rgb(177, 177, 177);
  height: 95px;
  margin-left: 7px;
}

#popup-label-options div:hover {
  cursor: default;
}

#popup-label-buttons {
  text-align: center;
  margin-top: 2px;
  margin-bottom: 2px;
  user-select: none;
}

.popup-label-button {
  margin-bottom: 5px;
  margin-top: 5px;
  padding-top: 6px;
  width: 60px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 4px;
  background-color: rgb(222, 222, 222);
  display: inline-block;
  border-radius: 2px;
  cursor: pointer;
}

#popup-submit-button {
  margin-right: 3px;
}

#popup-cancel-button {
  margin-left: 3px;
}

#popup-submit-button:hover {
  background-color: #9ed49f !important;
}

#popup-cancel-button:hover {
  background-color: #e2acac;
}

#popup-submit-button:active {
  background-color: #43b543 !important;
}

#popup-cancel-button:active {
  background-color: #d65e5e;
}

#left-side-bar {
  width: 57px;
  padding-top: 9px;
  text-align: center;
  float: left;
  background-color: white;
  height: 100vh;
  max-height: calc(100vh - 40px);
  overflow-y: auto;
  overflow-x: hidden;
  border-right: solid;
  border-left: solid;
  border-color: rgb(197, 197, 197);
  border-width: 1px;
}

#right-side-bar {
  width: 208px;
  padding-top: 8px;
  float: right;
  background-color: white;
  height: calc(100vh - 38px);
  border-right: solid;
  border-left: solid;
  border-width: 1px;
  border-color: rgb(197, 197, 197);
}

#right-side-bar:hover {
  cursor: default;
}

.right-side-bar-component {
  display: block;
  left: 0;
  padding-top: 3px;
}

.right-side-bar-component-title {
  padding-left: 5px;
  border-bottom: solid;
  border-bottom-color: #4e4b4b26;
  border-bottom-width: 1px;
  user-select: none;
}

#labels-list-overflow-parent {
  overflow-x: auto;
  overflow-y: auto;
  height: calc((100vh - 287px) / 2);
}

#image-list-overflow-parent {
  overflow-x: auto;
  overflow-y: auto;
  height: calc((100vh + 120px) / 2);
}

#label-list {
  width: 100%;
}

/* update these when changing the left side bar width */

#canvas-wrapper-parent {
  width: calc(100% - 269px);
  height: calc(100% - 60px);
  left: 59px;
}

#zoom-overflow-wrapper-parent {
  width: calc(100% - 270px);
  height: calc(100% - 60px);
  left: 59px;
}

#window-dim {
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 2;
  background-color: '';
  transition-property: background-color;
  transition-duration: 0.5s;
  transition-timing-function: linear;
  -webkit-transition-property: background-color;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-timing-function: linear;
  -moz-transition-property: background-color;
  -moz-transition-duration: 0.5s;
  -moz-transition-timing-function: linear;
  -o-transition-property: background-color;
  -o-transition-duration: 0.5s;
  -o-transition-timing-function: linear;
}

.labelListItem {
  padding-left: 4px;
  padding-bottom: 1px;
}

#zoom-overflow {
  overflow: auto;
  z-index: 1;
}

#stub {
  color: rgb(0,0,0,0);
  user-select: none;
  pointer-events: none;
}

table {
  border-spacing: 0;
}

td {
  padding: 0;
  width: inherit;
}

#popup-label-options td {
  padding-top: 1px;
  padding-bottom: 1px;
  width: inherit;
}

tr {
  width: inherit;
}

tbody {
  width: inherit;
}

body {
  margin-right: 0;
  margin-left: 0;
  margin-top: 0;
}

.tools-button {
  background-color: white;
  border-style: none;
  padding: 0;
  outline: none;
  cursor: pointer;
}

.tools-button:hover {
  background-color: rgb(238, 238, 238);
}

.tools-button:active {
  /* highlight in the color of what the icon is going to be */
  background-color: lightgreen;
}

.tools-button-icon {
  padding-top: 6px;
  width: 30px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 4px;
  user-select: none;
}

/* @media only screen and (max-height: 826px) {
  .tools-button-text {
    font-size: calc(13.3333 * (100vh / 826));
  }
  .tools-button-icon {
    width: calc(40 * (100vh / (906)));
  }
}

@media only screen and (max-height: 522px) {
  .tools-button-text {
    display: none;
  }
  .tools-button-icon {
    width: calc(40 * (100vh / (806)));
  }
} */

.checkbox {
  float: right;
  margin-left: 10px;
  margin-right: 7px;
}

.checkbox-text {
  float: left;
  padding-left: 5px;
}

.settings-table-row-data {
  padding-top: 2px;
  padding-bottom: 2px;
}

#header {
  border: solid;
  /* background-color: white; */
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom-width: 1px;
  border-color: #80808026;
}

#settings-table {
  padding: 2px;
}

#imageSwitch {
  border-bottom: solid;
  border-color: rgb(197, 197, 197);
  border-width: 1px;
  user-select: none;
}

#tools-drawing-section {
  border-top: solid;
  border-bottom: solid;
  border-width: 1px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-color: rgb(202, 209, 209);
}

.tools-button-hover-popup {
  margin-left: 62px;
  position: absolute;
  margin-top: -35px;
  background: black;
  color: white;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 4px;
  padding-bottom: 4px;
  display: none;
  z-index: 2;
  border-radius: 4px;
}


/*  Using panels 
#canvas-wrapper {
}

#popup-label-input {
  width: 150px;
  border: thin ridge grey;
  margin: 5px 5px 5px 5px;
  font-family: sans-serif;
  font-size: 15px;
  padding-top: 2px;
  padding-left: 2px;
  padding-right: 1px;
}

#c {
  left: 1000px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  padding-top: 3px;
  padding-bottom: 3px;
  display: none;
  position: absolute;
  background-color: white;
  width: 151px;
  overflow-y: auto;
  overflow-x: auto;
  border: thin solid grey;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 2;
  max-height: 154px;
}

.dropdown-content div:hover {
  cursor: default;
}
/* ... */

